BEEBEEP (Secure Network Chat)

BeeBEEP 0.9.6
- Auto set Away status when idle option
- Make screenshot plugin
- Conway's Game of Life plugin (just for fun)

BeeBEEP 0.9.5
- Load minimized at startup option
- A new window to see application log
- Save chat messages on exit option
- BeeTetris plugin added, just for fun
- Disable notification in tray option
- Improved group chat

BeeBEEP 0.9.4
- Use default password without prompt at startup
- RC file created to let the user choose Native or INI configuration file

BeeBEEP 0.9.3
- Group chat
- Put window on top when a new message arrive option
- Automatic start on windows boot option

BeeBEEP 0.9.2
- Minimize on System Tray is now Close on System Tray
- Always on top window option
- Select file audio option
- Game plugin interface
- MacOSX version

BeeBEEP 0.8.2
- File Sharing on local area network
- Minimize on System Tray option

BeeBEEP 0.6.2
- Number Encoder Text Marker plugin 
- File BeeHost.ini to reach custom networks

BeeBEEP 0.5.2
- File Transfer improved
- Plugin support enabled
- vCard (profile)
- HTML code in messages
- Rainbow Text Marker plugin
- Clickable url and email links